@@ -1,5 +1,12 @@
 2015-11-30  Ola Jeppsson  <ola@adapteva.com>
 
+	* epiphany-elf-sim.py.in: Change default paramters.
+	rows=cols=32. first_core=0x020
+	* sim-if.c (sim_esim_have_required_params): Change
+	default e-first-core to 0x020.
+
+2015-11-30  Ola Jeppsson  <ola@adapteva.com>
+
 	* esim/esim.c (es_addr_translate): Make access to area above end of
 	memory mapped registers illegal.
 
